--- a/.github/workflows/grading.yml
+++ b/.github/workflows/grading.yml
@@ -14,6 +14,8 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           feedback: ${{ toJSON(github.event.client_payload) }}
+          your-secret: ${{ secrets.EXAMPLE_SECRET }}
+        
   troubleshoot-activity:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
