--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -12,13 +12,14 @@ jobs:
       - name: Step 1 - Echo out a GitHub Actions Secret to the logs
         run: |
           echo "The GitHub Action Secret will be masked:  "
-          echo ${{ secrets.SECRET_TOKEN }}
+          echo ${{ secrets.EXAMPLE_SECRET }}
           echo "Trick to echo GitHub Actions Secret:  "
-          echo ${{secrets.SECRET_TOKEN}} | sed 's/./& /g' 
+          echo ${{secrets.EXAMPLE_SECRET }} | sed 's/./& /g' 
       - name: Grade use-secrets activity
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
         with:
           secrets-context: ${{ toJSON(secrets) }}
+          your-secret: ${{ secrets.EXAMPLE_SECRET }}
           
   # Show how to print unmasked GitHub secrets to the console
